<resources>
    <string name="app_name">NASA APOD</string>
    <string name="copyright_label">Copyright: %1$s</string>
    <string name="astronomy_picture_of_the_day">Astronomy Picture of the Day</string>
    <string name="nasa_astronomy_picture_of_the_day">NASA Astronomy Picture of the Day</string>
    <string name="september_27_2026">SEPTEMBER 27, 2026</string>
    <string name="the_astronomy_picture_of_the_day">The Astronomy Picture of the Day</string>
    <string name="nasa_s_explanation_will_appear_here">NASA\'s explanation will appear here.</string>
    <string name="select_date">Select date</string>
    <string name="share">Share</string>
    <string name="nasa_apod">NASA APOD</string>
</resources>
